@@ -6,6 +6,7 @@ import com.example.school_app.schoolApp.dto.AttendanceRecordDto;
 import com.example.school_app.schoolApp.dto.CourseDto;
 import com.example.school_app.schoolApp.dto.EnrollmentDto;
 import com.example.school_app.schoolApp.dto.StudentDto;
+import jakarta.transaction.Transactional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,6 +20,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 
 @SpringBootTest
+@Transactional
 class AttendanceRecordServiceTest {
 
     @Autowired
@@ -38,44 +40,91 @@ class AttendanceRecordServiceTest {
         attendanceRecordRepository.deleteAll();
     }
 
+//    @Test
+//    void testMarkStudentAttendance() {
+//        StudentDto savedStudents = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1"))).get(0);
+//
+//        CourseDto savedCourses = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101"))).get(0);
+//
+//        EnrollmentDto enrollmentDto1 = new EnrollmentDto();
+//        enrollmentDto1.setCourseId(savedCourses.getCourseId());
+//        enrollmentDto1.setStudentId(savedStudents.getStudentId());
+//
+//       List<EnrollmentDto> enrollments = enrollmentService.saveAllEnrollments(List.of(enrollmentDto1));
+//
+//        attendanceRecordService.markAttendance(enrollments.getFirst().getStudentId(), enrollments.getFirst().getCourseId(),
+//                LocalDate.of(2025, 12, 18), Status.PRESENT);
+//
+//        AttendanceRecordDto recordDto = attendanceRecordService.getStudentAttendance(enrollments.getFirst().getStudentId(), enrollments.getFirst().getCourseId());
+//
+//        assertNotNull(recordDto);
+//        assertEquals(Status.PRESENT, recordDto.getStatus());
+//        assertEquals(savedCourses.getCourseId(), recordDto.getCourseId());
+//        assertEquals(LocalDate.of(2025, 12, 18), recordDto.getDate());
+//
+//
+//    }
+
+    @Transactional
     @Test
     void testMarkStudentAttendance() {
-        StudentDto savedStudents = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1"))).get(0);
-        CourseDto savedCourses = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101"))).get(0);
+        LocalDate testDate = LocalDate.of(2025, 12, 18);
 
-        List<EnrollmentDto> enrollments = enrollmentService.saveAllEnrollments(List.of(
-                new EnrollmentDto(savedStudents.getStudentId(), savedCourses.getCourseId())));
+        StudentDto musa = studentService.saveAllStudents(List.of(
+                new StudentDto("musa", "musa@gmail.com", "ss1")
+        )).get(0);
 
-        attendanceRecordService.markAttendance(enrollments.getFirst().getStudentId(), enrollments.getFirst().getCourseId(),
-                LocalDate.of(2025, 12, 18), Status.PRESENT);
+        CourseDto physics = courseService.saveAllCourses(List.of(
+                new CourseDto("physics", "phy101")
+        )).get(0);
 
-        AttendanceRecordDto recordDto = attendanceRecordService.getStudentAttendance(enrollments.getFirst().getStudentId(), enrollments.getFirst().getCourseId());
+        EnrollmentDto enrollment = new EnrollmentDto();
+        enrollment.setCourseId(physics.getCourseId());
+        enrollment.setStudentId(musa.getStudentId());
+
+        enrollmentService.saveAllEnrollments(List.of(enrollment));
+
+        attendanceRecordService.markAttendance(
+                musa.getStudentId(), physics.getCourseId(), testDate, Status.PRESENT);
+
+        AttendanceRecordDto recordDto = attendanceRecordService.getStudentAttendance(
+                musa.getStudentId(), physics.getCourseId());
 
         assertNotNull(recordDto);
         assertEquals(Status.PRESENT, recordDto.getStatus());
-        assertEquals(savedCourses.getCourseId(), recordDto.getCourseId());
-        assertEquals(LocalDate.of(2025, 12, 18), recordDto.getDate());
-
-
+        assertEquals(physics.getCourseId(), recordDto.getCourseId());
+        assertEquals(musa.getStudentId(), recordDto.getStudentId());
+        assertEquals(testDate, recordDto.getDate());
     }
 
+    @Transactional
     @Test
     void testToSaveAllAttendanceRecords() {
-        StudentDto savedStudents = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1"))).get(0);
-        CourseDto savedCourses = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101"))).get(0);
-        List<EnrollmentDto> enrollments = enrollmentService.saveAllEnrollments(List.of(
-                new EnrollmentDto(savedStudents.getStudentId(), savedCourses.getCourseId())));
+        LocalDate testDate = LocalDate.of(2025, 12, 21);
+        LocalDate testDate1 = LocalDate.of(2025, 12, 22);
+
+        StudentDto savedStudents = studentService.saveAllStudents(List.of(
+                new StudentDto("abel", "abel@gmail.com", "ss1"))).get(0);
+
+        CourseDto savedCourses = courseService.saveAllCourses(List.of(
+                new CourseDto("physics", "phy101"))).get(0);
+
+        EnrollmentDto enrollmentDto = new EnrollmentDto();
+        enrollmentDto.setStudentId(savedStudents.getStudentId());
+        enrollmentDto.setCourseId(savedCourses.getCourseId());
+
+        enrollmentService.saveAllEnrollments(List.of(enrollmentDto));
 
         AttendanceRecordDto recordDto = new AttendanceRecordDto();
-        recordDto.setStudentId(enrollments.getFirst().getStudentId());
-        recordDto.setCourseId(enrollments.getFirst().getCourseId());
-        recordDto.setDate(LocalDate.of(2025, 12, 18));
+        recordDto.setStudentId(savedStudents.getStudentId());
+        recordDto.setCourseId(savedCourses.getCourseId());
+        recordDto.setDate(testDate);
         recordDto.setStatus(Status.ABSENT);
 
         AttendanceRecordDto recordDto1 = new AttendanceRecordDto();
-        recordDto1.setStudentId(enrollments.getFirst().getStudentId());
-        recordDto1.setCourseId(enrollments.getFirst().getCourseId());
-        recordDto1.setDate(LocalDate.of(2025, 12, 19));
+        recordDto1.setStudentId(savedStudents.getStudentId());
+        recordDto1.setCourseId(savedCourses.getCourseId());
+        recordDto1.setDate(testDate1);
         recordDto1.setStatus(Status.PRESENT);
 
         List<AttendanceRecordDto> dto = attendanceRecordService.saveAllAttendanceRecords(List.of(recordDto, recordDto1));
@@ -84,7 +133,8 @@ class AttendanceRecordServiceTest {
         assertEquals(2, dto.size());
         assertEquals(savedStudents.getStudentId(), dto.getFirst().getStudentId());
         assertEquals(Status.ABSENT, dto.getFirst().getStatus());
-        assertEquals(LocalDate.of(2025, 12, 18), dto.getFirst().getDate());
+        assertEquals(Status.PRESENT, dto.getLast().getStatus());
+        assertEquals(LocalDate.of(2025, 12, 21), dto.getFirst().getDate());
         assertEquals(savedStudents.getStudentId(), dto.getLast().getStudentId());
     }
 
