@@ -42,38 +42,15 @@ class EnrollmentServiceTest {
         assertEquals(savedCourse.getCourseId(), enrollments.get(0).getCourseId());
     }
 
-//    @Test
-//    void testToGetAllCourseForAStudent(){
-//        List <StudentDto> savedStudent = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1")));
-//        List<CourseDto> savedCourse = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
-//
-//        List <StudentDto> students = studentService.saveAllStudents(List.of(new StudentDto("yahaya", "yahaya@gmail.com", "ss1")));
-//        List<CourseDto> courses = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
-//
-//        EnrollmentDto enrollmentDto = new EnrollmentDto();
-//        enrollmentDto.setCourseId(savedCourse.getFirst().getCourseId());
-//        enrollmentDto.setStudentId(savedStudent.getFirst().getStudentId());
-//
-//        EnrollmentDto enrollmentDto1 = new EnrollmentDto();
-//        enrollmentDto1.setCourseId(courses.getLast().getCourseId());
-//        enrollmentDto1.setStudentId(students.getLast().getStudentId());
-//
-//        List<EnrollmentDto> enrollmentDtoList = enrollmentService.saveAllEnrollments(List.of(enrollmentDto, enrollmentDto1));
-//        List<EnrollmentDto> result = enrollmentService.getCourseByStudent(enrollmentDtoList.getFirst().getStudentId());
-//        assertNotNull(result);
-//        assertEquals(2, enrollmentDtoList.size());
-//        assertEquals(enrollmentDtoList.getFirst().getCourseId(), result.getFirst().getCourseId());
-//    }
 @Test
 void testToGetAllCourseForAStudent() {
     List<StudentDto> savedStudents = studentService.saveAllStudents(List.of(
             new StudentDto("musa", "musa@gmail.com", "ss1"),
-            new StudentDto("yahaya", "yahaya@gmail.com", "ss1")
-    ));
+            new StudentDto("yahaya", "yahaya@gmail.com", "ss1")));
+
     List<CourseDto> savedCourses = courseService.saveAllCourses(List.of(
             new CourseDto("physics", "phy101"),
-            new CourseDto("chemistry", "che101")
-    ));
+            new CourseDto("chemistry", "chm101")));
 
 
     Long student1Id = savedStudents.get(0).getStudentId();
@@ -81,20 +58,17 @@ void testToGetAllCourseForAStudent() {
     Long course2Id = savedCourses.get(1).getCourseId();
 
 
-    EnrollmentDto e1 = new EnrollmentDto();
-    e1.setCourseId(course1Id);
-    e1.setStudentId(student1Id);
+    EnrollmentDto enrollmentDto1 = new EnrollmentDto();
+    enrollmentDto1.setCourseId(course1Id);
+    enrollmentDto1.setStudentId(student1Id);
 
-    EnrollmentDto e2 = new EnrollmentDto();
-    e2.setCourseId(course2Id);
-    e2.setStudentId(student1Id);
+    EnrollmentDto enrollmentDto = new EnrollmentDto();
+    enrollmentDto.setCourseId(course2Id);
+    enrollmentDto.setStudentId(student1Id);
 
-    enrollmentService.saveAllEnrollments(List.of(e1, e2));
-
+    enrollmentService.saveAllEnrollments(List.of(enrollmentDto1, enrollmentDto));
 
     List<EnrollmentDto> result = enrollmentService.getCourseByStudent(student1Id);
-
-
     assertNotNull(result);
     assertEquals(2, result.size());
     assertEquals(course1Id, result.get(0).getCourseId());
@@ -106,26 +80,31 @@ void testToGetAllCourseForAStudent() {
 
     @Test
     void testToGetAllEnrollment(){
-        List <StudentDto> savedStudent = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1")));
-        List<CourseDto> savedCourse = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101")));
+        List <StudentDto> savedStudent = studentService.saveAllStudents(List.of(
+                new StudentDto("musa", "musa@gmail.com", "ss1"),
+                new StudentDto("yahaya", "yahaya@gmail.com", "ss1")));
 
-        StudentDto students = studentService.saveAllStudents(List.of(new StudentDto("yahaya", "yahaya@gmail.com", "ss1"))).get(0);
-        CourseDto courses = courseService.saveAllCourses(List.of(new CourseDto("physics", "phy101"))).get(0);
+        List<CourseDto> savedCourse = courseService.saveAllCourses(List.of(
+                new CourseDto("physics", "phy101"),
+                new CourseDto("physics", "phy101")));
+
 
         EnrollmentDto enrollmentDto = new EnrollmentDto();
-        enrollmentDto.setCourseId(savedCourse.getFirst().getCourseId());
-        enrollmentDto.setStudentId(savedStudent.getFirst().getStudentId());
+        enrollmentDto.setCourseId(savedCourse.get(0).getCourseId());
+        enrollmentDto.setStudentId(savedStudent.get(0).getStudentId());
 
         EnrollmentDto enrollmentDto1 = new EnrollmentDto();
-        enrollmentDto1.setStudentId(students.getStudentId());
-        enrollmentDto1.setCourseId(courses.getCourseId());
+        enrollmentDto1.setStudentId(savedStudent.get(1).getStudentId());
+        enrollmentDto1.setCourseId(savedCourse.get(1).getCourseId());
 
         enrollmentService.saveAllEnrollments(List.of(enrollmentDto, enrollmentDto1));
+
         List<EnrollmentDto> result = enrollmentService.getAllEnrollment();
 
         assertNotNull(result);
         assertEquals(2, result.size());
     }
+
     @Test
     void testToGetAllStudentByACourse(){
         StudentDto studentDto = studentService.saveAllStudents(List.of(new StudentDto("musa", "musa@gmail.com", "ss1"))).get(0);
